done for the day with about and responsiveness

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="footer-grid">
       <div class="footer-col footer-brand">
         <div class="footer-logo">
-          <img src="https://github.com/SaqibShakil303/Sunflowertrip/blob/master/src/assets/images/logo3.png?raw=true" alt="Sunflower Trip Logo">
+          <img src="https://github.com/SaqibShakil303/Sunflowertrip/blob/master/src/assets/hero/logo56.png?raw=true" alt="Sunflower Trip Logo">
           <span>Sunflower Trip</span>
         </div>
         <p>Your Kolkata-based travel partner crafting personalized journeys worldwide.</p>
@@ -17,12 +17,13 @@
       <div class="footer-col">
         <h4>Quick Links</h4>
         <ul>
-          <li><a routerLink="/home">Home</a></li>
-          <li><a routerLink="/about">About</a></li>
+          <li><a routerLink="/">Home</a></li>
+          <li><a routerLink="/aboutUs">About</a></li>
           <li><a routerLink="/services">Services</a></li>
           <li><a routerLink="/destinations">Destinations</a></li>
           <li><a routerLink="/testimonials">Testimonials</a></li>
           <li><a routerLink="/contact">Contact</a></li>
+          <li><a routerLink="/privacyPolicy">Privacy Policy</a></li>
         </ul>
       </div>
       <div class="footer-col">
