--- a/src/app/pages/careers/careers.component.html
+++ b/src/app/pages/careers/careers.component.html
@@ -1,4 +1,5 @@
 <!-- careers.component.html -->
+ <app-navbar></app-navbar>
 <section class="careers glass-section">
     <div class="container">
       <h1>Join Our Journey</h1>
@@ -39,3 +40,4 @@
       </div>
     </div>
   </section>
+  <app-footer></app-footer>
