--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,6 +6,7 @@
     --accent-color: #6c63ff;
     --text-color: #4a4a4a;
     --white: #4db6ac;
+    ---text-gray:#9e9e9e;
     --pink: #009688;
     --light-pink: #b2dfdb;
     --dark-pink: #004d40;
