--- a/src/app/components/why-us/why-us.component.html
+++ b/src/app/components/why-us/why-us.component.html
@@ -1,23 +1,24 @@
-<section class="why-us-section" id="why-us">
+<section class="why-us-section">
   <div class="overlay"></div>
   <div class="container">
-    <div class="section-title">
+    <div class="section-title text-center">
       <h2>Why Choose Sunflower Trip?</h2>
       <p>Discover what sets us apart as your Kolkata-based travel partner</p>
     </div>
 
-    <div class="feature-grid">
-      <div
-        class="feature"
-        *ngFor="let item of whyUsItems; let i = index"
-        [attr.data-aos]="'fade-up'"
-        [attr.data-aos-delay]="100 + i * 100"
-        [ngStyle]="{ transform: 'translateY(' + (i * 15) + 'px)' }"
-      >
-        <i [ngClass]="item.icon"></i>
-        <h3>{{ item.title }}</h3>
-        <p>{{ item.description }}</p>
+    <div class="swiper whyus-slider" #swiperContainer>
+      <div class="swiper-wrapper">
+        <div class="swiper-slide" *ngFor="let item of whyUsItems; let i = index">
+          <div class="whyus-card fade-in-up" [style.--delay]="i">
+            <i [ngClass]="item.icon"></i>
+            <h3>{{ item.title }}</h3>
+            <p>{{ item.description }}</p>
+          </div>
+        </div>
       </div>
+      <div class="swiper-pagination"></div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
     </div>
   </div>
 </section>
