--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,4 +1,4 @@
-/* Main header styling */
+/* KEEPING ORIGINAL DESKTOP DESIGN AS-IS */
 .header {
   background-repeat: no-repeat;
   background-size: cover;
@@ -7,34 +7,29 @@
   position: relative;
 }
 
-/* Hero text elements */
 .top__text {
   width: 138px;
   margin: 0 auto;
   font-family: "Forum", cursive;
-  font-size: 35px;
+  font-size: 30px;
   line-height: 98.5%;
-  // text-align: left;
   letter-spacing: 0.3em;
   text-transform: uppercase;
   color: whitesmoke;
   margin-bottom: 60px;
   margin-left: 100px;
-  margin-top: 55
-  px;
+  margin-top: 75px;
   transform: scale3d(1, 1, 1) rotateY(500deg);
   opacity: 0;
 }
 
 .top__text._active {
-  // text-align: left;
   transform: scale3d(1, 1, 1) rotateY(0deg);
   transition: all 0.8s ease 0s;
   opacity: 1;
 }
 
 h1 {
-  // padding-right: 400px;
   padding-bottom: 20px;
   font-family: "Forum", cursive;
   font-weight: normal;
@@ -56,21 +51,6 @@ h1._active {
   transition: all 0.8s ease 0s;
 }
 
-.top__img {
-  padding-top: 80px;
-  position: absolute;
-  width: 100%;
-  height: 566px;
-  bottom: 0;
-}
-
-.top__img-bottom {
-  position: absolute;
-  width: 100%;
-  bottom: -1px;
-  height: 410px;
-}
-
 h2 {
   font-family: "Forum", cursive;
   font-weight: normal;
@@ -82,9 +62,6 @@ h2 {
   text-transform: uppercase;
   color: #fcfcfc;
   width: 100%;
-  // position: absolute;
-  bottom: 50px;
-  //  padding-top: 150px;
   transform: translate(0px, 115%);
   opacity: 0;
   z-index: 5;
@@ -96,139 +73,70 @@ h2._active {
   transition: all 0.8s ease 0.4s;
 }
 
-/* Diamond shape elements */
-.romb,
-.romb-left,
-.romb-right,
-.romb-topl,
-.romb-topr {
-  background: rgba(255, 255, 255, 0.31);
-  backdrop-filter: blur(10px);
-  transform: rotate(90deg);
-  width: 213px;
-  height: 112px;
-  clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
-  position: relative;
-  margin: 0 auto;
-  top: -16px;
+/* ✅ RESPONSIVE MEDIA QUERIES — ONLY FOR SMALL SCREENS */
+@media (max-width: 1200px) {
+  h1 {
+    font-size: 140px;
+    width: 100%;
+  }
+
+  h2 {
+    font-size: 100px;
+    margin-left: 20px;
+  }
 }
 
-.romb::before,
-.romb-left::before,
-.romb-right::before,
-.romb-topl::before,
-.romb-topr::before {
-  content: "";
-  position: absolute;
-  width: 100px;
-  height: 187px;
-  background-color: transparent;
-  border: 2px solid #fff;
-  border-top: none;
-  border-bottom: none;
-  transform: rotate(118deg);
-  top: -37px;
-  right: 56px;
+@media (max-width: 992px) {
+  .top__text {
+    font-size: 22px;
+    margin-left: 40px;
+    margin-top: 60px;
+  }
+
+  h1 {
+    font-size: 100px;
+    line-height: 100px;
+    text-align: center;
+    width: auto;
+  }
+
+  h2 {
+    font-size: 80px;
+    text-align: center;
+    margin-left: 0;
+  }
 }
 
-.romb::after,
-.romb-left::after,
-.romb-right::after,
-.romb-topl::after,
-.romb-topr::after {
-  content: "";
-  position: absolute;
-  width: 100px;
-  height: 187px;
-  background-color: transparent;
-  border: 2px solid #fff;
-  border-top: none;
-  border-bottom: none;
-  transform: rotate(62deg);
-  bottom: -37px;
-  left: 57px;
+@media (max-width: 768px) {
+  .top__text {
+    font-size: 18px;
+    margin-left: 20px;
+    text-align: center;
+  }
+
+  h1 {
+    font-size: 60px;
+    line-height: 70px;
+  }
+
+  h2 {
+    font-size: 45px;
+  }
 }
 
-.romb-left {
-  width: 83px;
-  height: 43px;
-  margin-left: 55px;
-  top: -80px;
-}
+@media (max-width: 480px) {
+  .top__text {
+    font-size: 14px;
+    margin: 40px 0 30px;
+    text-align: center;
+  }
 
-.romb-left::before {
-  top: -14px;
-  right: 22px;
-  width: 39px;
-  height: 70px;
-}
+  h1 {
+    font-size: 40px;
+    line-height: 50px;
+  }
 
-.romb-left::after {
-  bottom: -13px;
-  left: 23px;
-  width: 39px;
-  height: 70px;
-}
-
-.romb-right {
-  width: 100px;
-  height: 52px;
-  margin-right: 190px;
-  top: -85px;
-}
-
-.romb-right::before {
-  top: -18px;
-  right: 25px;
-  width: 46px;
-  height: 90px;
-}
-
-.romb-right::after {
-  bottom: -17px;
-  left: 27px;
-  width: 46px;
-  height: 86px;
-}
-
-.romb-topl {
-  width: 52px;
-  height: 27px;
-  margin-left: 150px;
-  top: -330px;
-}
-
-.romb-topl::before {
-  top: -12px;
-  right: 14px;
-  width: 25px;
-  height: 50px;
-}
-
-.romb-topl::after {
-  bottom: -9px;
-  left: 14px;
-  width: 25px;
-  height: 45px;
-}
-
-.romb-topr {
-  width: 50px;
-  height: 26px;
-  margin-right: 160px;
-  top: -300px;
-}
-
-.romb-topr::before {
-  top: -11px;
-  right: 13px;
-  width: 24px;
-  height: 48px;
-}
-
-.romb-topr::after {
-  bottom: -8px;
-  left: 14px;
-  width: 24px;
-  height: 43px;
+  h2 {
+    font-size: 32px;
+  }
 }
