--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,14 +6,14 @@
     <!-- Hero content -->
     <div class="top__text" appAnimation>explore the world</div>
     <div>
-      <h1 appAnimation>Find Your</h1>
+      <h1 appAnimation>Beyond The</h1>
       <!-- <img class="top__img" src="https://github.com/SaqibShakil303/Sunflowertrip/blob/master/src/assets/images/header-bg2.png?raw=true" alt="Background Image"> -->
       <!-- <div class="romb"></div>
       <div class="romb-left"></div>
       <div class="romb-right"></div>
       <div class="romb-topl"></div>
       <div class="romb-topr"></div> -->
-      <h2 appAnimation>luxury spot</h2>
+      <h2 appAnimation>Boundaries</h2>
     </div>
     <!-- <img class="top__img-bottom" src="https://github.com/SaqibShakil303/Sunflowertrip/blob/main/src/assets/images/header-bg-2.png?raw=true" alt="Bottom Background Image"> -->
     <app-destinations></app-destinations>
