--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -17,7 +17,7 @@
   text-transform: uppercase;
   color: whitesmoke;
   margin-bottom: 60px;
-  margin-left: 100px;
+  // margin-left: 100px;
   margin-top: 75px;
   transform: scale3d(1, 1, 1) rotateY(500deg);
   opacity: 0;
@@ -33,13 +33,13 @@ h1 {
   padding-bottom: 20px;
   font-family: "Forum", cursive;
   font-weight: normal;
-  font-size: 198px;
-  line-height: 129px;
+  font-size: 170PX;
+  line-height: 170px;
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #fcfcfc;
   margin: 0 auto;
-  text-align: left;
+  text-align: center;
   width: 940px;
   transform: translate(0px, 115%);
   opacity: 0;
